# nutriterm

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  _typos.toml  justfile  test-ci.md
.github/workflows/: ci.yml
.helix/: config.toml  languages.toml
src/: error.rs  main.rs  workspace.rs
src/catalog/: discovery.rs  ingredients.schema.json  loader.rs  mod.rs  schema.rs
src/commands/: init.rs  kitchen_ref.rs  list_recipes.rs  mod.rs  recipe.rs
src/data/: loader.rs
src/display/: mod.rs  nutrition.rs
src/error/: app_error.rs  jsonc_error.rs  load_error.rs  mod.rs
src/models/: mod.rs  weighted_ingredient.rs
src/schema/: generator.rs  ingredient.schema.json  mod.rs  recipe.schema.json  recipes.schema.json
src/templates/: ingredients.template.jsonc  recipes.template.jsonc
src/utils/: suggestions.rs
tests/: cli.rs  common.rs  init.rs  kitchen_ref.rs  list_recipes.rs  recipe.rs  scaling.rs
tests/snapshots/: cli__early_return_recipe_error_format.snap  cli__help_output.snap  cli__improved_file_error_unreadable_ingredients.snap  cli__improved_file_error_unreadable_recipes.snap  cli__no_subcommand_error.snap  init__directory_not_empty.snap  init__ingredients_content.snap  init__ingredients_schema.snap  init__recipes_content.snap  init__recipes_schema.snap  init__success.snap  kitchen_ref__markdown_output.snap  kitchen_ref__no_catalog.snap  kitchen_ref__no_workspace.snap  kitchen_ref__output.snap  list_recipes__invalid_json.snap  list_recipes__missing_file.snap  list_recipes__no_workspace.snap  list_recipes__schema_duplicate_ingredient_ids.snap  list_recipes__schema_duplicate_recipe_names.snap  list_recipes__schema_ingredients_excessive_values.snap  list_recipes__success.snap  (+34 more)
(+15 files in other folders)
