[package]
name = "nutriterm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.32"
jsonc-parser = { version = "0.26", features = ["serde"] }
tabled = "0.20"
strsim = "0.11.1"

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.43", features = ["yaml"] }
tempfile = "3.8"
