[package]
name = "nutriterm"
version = "0.1.0"
edition = "2024"
description = "Terminal-based nutrition calculator for recipes"
license = "MIT"
repository = "https://github.com/cfuehrmann/nutriterm"
keywords = ["nutrition", "recipes", "cli", "calculator"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = { version = "0.41", default-features = false, features = ["resolve-file"] }
jsonc-parser = { version = "0.29", features = ["serde"] }
tabled = "0.20"
strsim = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
insta = { version = "1.43", features = ["yaml"] }
tempfile = "3.21"
